--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ dateutil
 django-simple-history
 django<2.0
 git+ssh://labsdeploy/pewresearch/pewhooks#egg=pewhooks
+git+ssh://labsdeploy/pewresearch/django_pewtils#egg=django_pewtils
+git+ssh://labsdeploy/pewresearch/pewtils#egg=pewtils
+
