--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,9 @@ mca>=1.0.3
 nilsimsa>=0.3.8
 nltk>=3.2.2
 numpy<1.17.0; python_version < '3.0'
-numpy>=1.16.0; python_version > '3.0'
-pandas>=0.19.2
+numpy>=1.16.0; python_version >= '3.0'
+pandas<0.25.0; python_version < '3.0'
+pandas>=0.25.0; python_version >= '3.0'
 polyglot
 psycopg2
 python-dateutil>=2.6.0
@@ -32,7 +33,7 @@ pytz>=2016.10
 requests>=2.13.0
 scandir>=1.5
 scipy<1.3; python_version < '3.0'
-scipy>=1.2; python_version >= '3.0'
+scipy>=1.4; python_version >= '3.0'
 seaborn>=0.9.0
 simplejson>=3.10.0
 ssdeep>=3.3
