--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ django-rq>=0.9.5
 django-simple-history>=2.7.3
 django-widget-tweaks>=1.4.1
 django>=3.1
-django_pewtils @ git+https://github.com/pewresearch/django_pewtils
+django_pewtils
 future
 fuzzywuzzy>=0.15.0
 gensim>=3.8.1
@@ -21,8 +21,8 @@ nilsimsa>=0.3.8
 nltk>=3.2.2
 numpy>=1.16.0
 pandas>=0.25.0
-pewhooks @ git+https://github.com/pewresearch/pewhooks
-pewtils @ git+https://github.com/pewresearch/pewtils
+pewhooks
+pewtils
 polyglot
 psycopg2
 python-dateutil>=2.6.0
