--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -27,14 +27,9 @@ jobs:
           make python_lint_errors
           make python_lint_quality
 
-      - name: Run unit tests
-        env:
-          TWITTER_API_KEY: '${{ secrets.TWITTER_API_KEY }}'
-          TWITTER_API_SECRET: '${{ secrets.TWITTER_API_SECRET }}'
-          TWITTER_API_ACCESS_TOKEN: '${{ secrets.TWITTER_API_ACCESS_TOKEN }}'
-          TWITTER_API_ACCESS_SECRET: '${{ secrets.TWITTER_API_ACCESS_SECRET }}'
-        run: |
-          make python_test
+#      - name: Run unit tests
+#        run: |
+#          make python_test
 
       - name: Build Python package
         run: |
