--- a/.github/workflows/build-main.yaml
+++ b/.github/workflows/build-main.yaml
@@ -8,7 +8,9 @@ on:
       - django_twitter/**
       - requirements.txt
       - setup.py
-#      - tests/**
+      - tests/**
+      - testapp/**
+      - tests.py
 
 name: build-main
 
@@ -38,9 +40,9 @@ jobs:
           make python_lint_errors
           make python_lint_quality
 
-#      - name: Run unit tests
-#        run: |
-#          make python_test
+      - name: Run unit tests
+        run: |
+          make python_test
 
       - name: Build Python package
         run: |
