--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django>=3.1,<3.2
 django-picklefield>=3.0.1
 future>=0.18.2
 pandas>=0.25.3
+pewanalytics>=1.0.5
 pewtils>=1.0.8
 python_dateutil>=2.8.2
 pytz>=2021.1
